# PokeApi

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  populate.py  pyproject.toml
mo_tech_pokemon/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
pokemon_api/: test_all.py  urls.py  views.py
pokemon_api/models/: pokemons.py
pokemon_api/utils/: chain_utils.py  handle_utils.py  poke_utils.py
