[tool.poetry]
name = "mo_tech_pokemon"
version = "0.1.0"
description = "reto tecnico MO technologies Pokemon"
authors = ["Anthony Diaz <anthony.gdmou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
mongoengine = "^0.24.2"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
